# agent_repo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Equipment/models/: Equipment.sqlx
Kuber_Raj/ingestion_files/: RiteWorkorderPart_sql.sqlx  RiteWorkorderPart_sql_unit_test.txt
RiteWorkorderPart/models/: RiteWorkorderPart.sqlx
RiteWorkorderPart/tests/: RiteWorkorderPart_unit_test.txt
dataform/: air_carrier_mapping.sqlx  aircraft_business_logic.sqlx  flight_health.sqlx  flight_health_requirements.sqlx  flight_health_unit_test.txt
dataform/definitions/: RiteWorkorderPart.sqlx
dataform/models/: Equipment.sqlx  air_carrier_mapping.sqlx  air_carrier_mapping_model.sqlx  aircraft_business_logic.sqlx  aircraft_business_logic_model.sqlx  flight_health_model.sqlx  flight_health_requirements.sqlx  mdl_flight_deep_fact_v4.sqlx  product_details_cleaned.sqlx
dataform/tests/: air_carrier_mapping_model_unit_test.txt  air_carrier_mapping_unit_test.txt  aircraft_business_logic_model_unit_test.txt  aircraft_business_logic_unit_test.txt  flight_health_model_unit_test.txt  flight_health_requirements_unit_test.txt  mdl_flight_deep_fact_v4_unit_test.txt
dataform_models/: RiteWorkorderPart.sqlx  air_carrier_mapping.sqlx  aircraft_business_logic.sqlx  flight_health_analysis.sqlx
dataform_models/unit_tests/: air_carrier_mapping_unit_test.txt  aircraft_business_logic_unit_test.txt  (+1 more)
docs/: Logistics_IoT_Gateway_Requirements.docx
models/: RiteWorkorderPart.sqlx  aero_maint_heavy_pkg.sqlx  mdl_flight_deep_fact_v4.sqlx  mdl_flight_health_assessment.sqlx
sqlx_models/: Equipment.sqlx
src/: __init__.py  agents.py  cleaning.py  config.py  data_models.py  gateway.py  gateway_cleanse.py  gateway_ingest.py  gateway_normalize.py  gateway_router.py  gateway_schemas.py  ingestion.py  main.py  normalization.py  routing.py
tests/: aero_maint_heavy_pkg_unit_test.txt  air_carrier_mapping_unit_test.txt  aircraft_business_logic_unit_test.txt  flight_health_requirements_unit_test.txt  mdl_flight_deep_fact_v4_unit_test.txt  mdl_flight_health_assessment_unit_test.txt  test_agents.py  test_cleaning.py  test_data_models.py  test_gateway.py  test_gateway_cleanse.py  test_gateway_ingest.py  test_gateway_normalize.py  test_gateway_router.py  test_ingestion.py  test_normalization.py  test_routing.py
(+1 files in other folders)
