[project]
name = "iot-sensor-data-gateway"
version = "0.1.0"
description = "IoT Sensor Data Gateway for processing and routing truck sensor data."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [] # No external dependencies for core logic

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_name*"] # Adjust to your actual package name

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

