[project]
name = "iot-sensor-data-gateway"
version = "0.1.0"
description = "A Python-based IoT Sensor Data Gateway for processing and routing sensor data."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" } # Or specify a license file, e.g., { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Monitoring",
    "Topic :: Internet Of Things :: Gateway"
]
dependencies = [
    # No external dependencies currently required as per prompt constraints.
    # If using Pydantic in future, uncomment:
    # "pydantic>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/iot-sensor-data-gateway"
Repository = "https://github.com/yourusername/iot-sensor-data-gateway"
"Bug Tracker" = "https://github.com/yourusername/iot-sensor-data-gateway/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--strict-markers --strict-config"
testpaths = "tests"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
